--- a/public/404.html
+++ b/public/404.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Check-In</title>
-    <script>
-      var path = window.location.pathname;
-      var repo = '/Check-In-Front';
-      if (path.startsWith(repo)) {
-        var route = path.slice(repo.length);
-        sessionStorage.setItem('redirect', route);
-        window.location.replace(repo + '/');
-      }
+    <script type="text/javascript">
+      // Captura la ruta que causó el 404 y la guarda en sessionStorage
+      var pathSegmentsToKeep = 1; // El nombre del repo: /Check-In-Front
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.replace(/&/g, '~and~') : '') +
+        l.hash
+      );
     </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
