--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Check-In</title>
+
     <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
@@ -16,9 +18,10 @@
         }
       }(window.location));
     </script>
-  </head>
+    </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.tsx"></script>
+    
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
